--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,27 +11,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: 3.8
     - name: Install black
       run: |
         python -m pip install --upgrade pip
         pip install 'black<=23'
     - name: Format with black
       run: |
-        python -m black --check -l 100 -t py37 -S ranzen/
-        python -m black --check -l 100 -t py37 -S tests/
+        python -m black --check -l 100 -t py38 -S ranzen/
+        python -m black --check -l 100 -t py38 -S tests/
 
   format_with_isort:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
+    - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: 3.8
     - name: Install isort
       run: |
         python -m pip install --upgrade pip
@@ -72,10 +72,10 @@ jobs:
       # ----------------------------------------------
       - name: Check out repository
         uses: actions/checkout@v2
-      - name: Set up Python 3.7
+      - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: 3.8
 
       # ----------------------------------------------
       #  -----  install & configure poetry  -----
@@ -92,7 +92,7 @@ jobs:
       # ----------------------------------------------
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install -E all --no-interaction --no-root
+        run: poetry install --no-interaction --no-root
 
       # ----------------------------------------------
       #  -----  install and run pyright  -----
