--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ extra_standard_library = ["dataclasses", "__future__", "typing_extensions"]
 line_length = 88
 profile = "black"
 force_sort_within_sections = "True"
-classes = ["MISSING"]
+classes = ["MISSING", "LAMB", "SAM"]
 
 [tool.poetry]
 name = "ranzen"
@@ -51,32 +51,34 @@ classifiers=[
   "Typing :: Typed",
 ]
 keywords=["typing", "python"]
-repository="https://github.com/predictive-analytics-lab/ranzen"
+repository="https://github.com/wearepal/ranzen"
 readme="README.md"
 
-# By default, dependencies across all non-optional groups will be installed when executing poetry install.
-# If you only want to install the default, non-grouped dependencies (aka the main group), you can 
-# do so with the --only option: ``poetry install --only main``. Equally, you can exclude one or 
-# more groups with the --without option: ``poetry install --without torch``.
 [tool.poetry.dependencies]
 python = ">=3.8.0,<3.12"
 typing-extensions = ">=4.5.0"
 
-[tool.poetry.group.wandb.dependencies]
-pandas = { version = "^1.5.0" }
-wandb = { version= ">=0.12,<0.14" }
+# wandb dependencies
+pandas = { version = "^1.5.0", optional = true }
+wandb = { version= ">=0.12,<0.14", optional = true }
 
-[tool.poetry.group.logging.dependencies]
-wrapt = "^1.14.1"
-loguru = "^0.6.0"
+# logging dependencies
+loguru = { version = "^0.6.0", optional = true }
 
-[tool.poetry.group.torch.dependencies]
-torch = { version = ">=1.12.1" }
-numpy = { version = "^1.23.2" }
+# torch dependencies
+torch = { version = ">=1.12.1", optional = true }
+numpy = { version = "^1.23.2", optional = true }
 
-[tool.poetry.group.hydra.dependencies]
-hydra-core = { version = "^1.3.0" }
-neoconfigen = { version = ">=2.3.3" }
+# hydra dependencies
+hydra-core = { version = "^1.3.0", optional = true }
+neoconfigen = { version = ">=2.3.3", optional = true }
+
+[tool.poetry.extras]
+wandb = ["pandas", "wandb"]
+logging = ["loguru"]
+torch = ["torch", "numpy"]
+hydra = ["hydra-core", "neoconfigen"]
+all = ["hydra-core", "loguru", "neoconfigen", "numpy", "pandas", "torch", "wandb"]
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1"
