--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,36 +1,57 @@
 ---
-name: Build docs
+name: Deploy static content to Pages
 
 on:
   release:
     types:
       - published
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
-  docs:
+  # Single deploy job since we're just deploying
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-    #----------------------------------------------
-    #       check-out repo and set-up python
-    #----------------------------------------------
-    - name: Check out repository
-      uses: actions/checkout@v2
-    - name: Set up python
-      uses: actions/setup-python@v2
-      with:
-        python-version: "3.10"
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-    - name: Install sphinx
-      run: |
-        pip install wheel
-        pip install sphinx autodocsumm typing_extensions furo toml
+      - name: Install sphinx
+        run: |
+          pip install wheel
+          pip install sphinx autodocsumm typing_extensions furo toml
 
-    - name: Build docs
-      run: |
-        sphinx-build -b html ./docs ./docs/_build
+      - name: Build docs
+        run: |
+          sphinx-build -b html ./docs ./docs/_build
 
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        publish_dir: ./docs/_build
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          # Upload entire repository
+          path: './docs/_build'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
